@@ -10,6 +10,7 @@
 * [#41] Provide SASL-option support, primarily for authzid
   [Anthony M. Martinez]
 * [#43] Error with to_xml [ilusi0n.x]
+* [#44] Accept '0' and '1' as boolean value [projekttabla]
 
 == 1.2.1: 2009-12-15
 
